# csort

./: Cargo.toml  Rocket - Example.toml  Rocket.toml  csort-files.tar.bz2.foobar  lister.html  vector_extend_notes.txt
src/: color.rs  colorhsl.rs  main.rs  page.rs  rocket_example.rs  sort_hsl.rs  template_footer.html  template_header.html  upload.rs
static/css/: block.css  default_style.css  doublelist.css  grid.css  list.css
