[package]
name = "csort"
version = "0.1.0"
authors = ["Andrew Prindle <prindle.andrew@gmail.com>"]

[dependencies]
hsl = "0.1.1"
regex = "0.2"
time = "0.1"
lazy_static = "0.2.8"
multipart = "0.13.3"
serde_json = "1.0.2"
serde = "1.0.11"
serde_derive = "1.0.11"
rocket = "0.3.2"
rocket_codegen = "0.3.2"

